--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="목소리 인식기" />
-
-    <Button
-        android:id="@+id/btn_start"
+        android:id="@+id/mypage"
+        android:layout_alignParentRight="true"
+        android:src="@mipmap/ic_launcher_round"/>
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="녹음 시작" />
-
-    <Button
-        android:id="@+id/btn_stop"
+        android:id="@+id/logo"
+        android:layout_alignParentRight="true"
+        android:src="@mipmap/ic_launcher_round"/>
+    <LinearLayout
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="재생" />
+        android:orientation="vertical"
+        android:padding="10px"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/notice"
+            android:text="알림"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/meeting"
+            android:text="회의"/>
 
-    <TextView
-        android:id="@+id/text_view_status"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="asd" />
-
-</LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/interview"
+            android:text="면접"/>
+    </LinearLayout>
+</RelativeLayout>
